--- a/portfolio-details_Aust_Virus.html
+++ b/portfolio-details_Aust_Virus.html
@@ -35,8 +35,8 @@
 <body>
 
 	<!-- Start Header Area -->
-	<header id="header" class="dark">
-		<div class="container main-menu">
+	<!-- <header id="header" class="dark"> -->
+		<!-- <div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
 					<a href="index.html"><img src="img/logo2.png" alt="" title="" /></a>
@@ -63,8 +63,8 @@
 					</ul>
 				</nav>
 			</div>
-		</div>
-	</header>
+		</div> -->
+	<!-- </header> -->
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
@@ -78,7 +78,7 @@
 					<p class="link-nav">
 						<span class="box">
 							<a href="index.html">Home </a>
-							<a href="portfolio.html">Portfolio</a>
+							<!-- <a href="portfolio.html">Portfolio</a> -->
 							<!--<a href="portfolio-details.html">Portfolio Details</a></p>-->
 					</span>
 				</div>
@@ -201,19 +201,19 @@
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="https://www.linkedin.com/in/saiful-somum/"><i class="fa fa-linkedin"></i></a>
+							<a href="https://github.com/somum"><i class="fa fa-github"></i></a>
+							<a href="https://twitter.com/saiful_somum"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.facebook.com/m.somum/"><i class="fa fa-facebook"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row footer-bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
-					
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Designed by <a href="#" target="_blank">somum</a>
-</p>
+					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
 	</footer>
